--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Primary SEO -->
-    <title>Honey Hive Montessori House | Montessori Preschool & Early Learning</title>
-    <meta name="description" content="Honey Hive Montessori House is a nurturing Montessori preschool focused on early childhood education, creative learning, and holistic child development in a safe and joyful environment." />
-    <meta name="keywords" content="Montessori school, preschool, kindergarten, early learning center, child care, nursery school, Montessori education, Honey Hive Montessori House" />
+    <!-- Primary SEO (LOCAL) -->
+    <title>Montessori Preschool in Thoraipakkam, Chennai | Honey Hive Montessori House</title>
+    <meta
+      name="description"
+      content="Honey Hive Montessori House is a Montessori preschool in Thoraipakkam, Chennai offering Playgroup, Nursery, Pre-KG & Kindergarten in a safe, joyful and child-led learning environment."
+    />
+    <meta
+      name="keywords"
+      content="Montessori preschool in Thoraipakkam, Montessori school Thoraipakkam, preschool near OMR, kindergarten in Thoraipakkam, nursery school in Thoraipakkam, early learning center Chennai, Honey Hive Montessori House"
+    />
     <meta name="author" content="Honey Hive Montessori House" />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://your-domain.com/" />
+    <link rel="canonical" href="https://honeyhivemontessorihouse.com/" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Honey Hive Montessori House | Montessori Preschool & Early Learning" />
-    <meta property="og:description" content="A joyful Montessori environment where children learn, explore, and grow through creativity and play." />
+    <meta property="og:title" content="Montessori Preschool in Thoraipakkam, Chennai | Honey Hive Montessori House" />
+    <meta
+      property="og:description"
+      content="A joyful Montessori environment in Thoraipakkam, Chennai where children learn, explore, and grow."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
-    <meta property="og:image" content="/honey-hive-preview.png" />
+    <meta property="og:url" content="https://honeyhivemontessorihouse.com/" />
+    <meta property="og:image" content="https://honeyhivemontessorihouse.com/honey-hive-preview.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -30,15 +41,103 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Honey Hive Montessori House" />
-    <meta name="twitter:description" content="A joyful Montessori environment where children learn, explore, and grow." />
-    <meta name="twitter:image" content="/honey-hive-preview.png" />
+    <meta name="twitter:description" content="Montessori preschool in Thoraipakkam, Chennai." />
+    <meta name="twitter:image" content="https://honeyhivemontessorihouse.com/honey-hive-preview.png" />
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#FFB703" />
+
+    <!-- Preconnect (optional performance) -->
+    <link rel="preconnect" href="https://www.google.com" />
+    <link rel="preconnect" href="https://maps.google.com" />
+
+    <!-- Local Business Schema (Preschool) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Preschool",
+        "name": "Honey Hive Montessori House",
+        "url": "https://honeyhivemontessorihouse.com/",
+        "image": "https://honeyhivemontessorihouse.com/honey-hive-preview.png",
+        "telephone": "+91-9952900051",
+        "priceRange": "$$",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Raama Associates, 1A, Vinayaganagar, MCN Nagar Extension",
+          "addressLocality": "Thoraipakkam",
+          "addressRegion": "Tamil Nadu",
+          "postalCode": "600097",
+          "addressCountry": "IN"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 12.949064,
+          "longitude": 80.235737
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+            "opens": "09:00",
+            "closes": "19:30"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Saturday",
+            "opens": "09:00",
+            "closes": "14:00"
+          }
+        ],
+        "areaServed": [
+          "Thoraipakkam",
+          "OMR",
+          "Perungudi",
+          "Sholinganallur",
+          "Chennai"
+        ]
+      }
+    </script>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What age group does Honey Hive Montessori House accept?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We offer early learning programs for toddlers and preschoolers. Please call us to confirm the current age eligibility for Playgroup, Nursery, Pre-KG and Kindergarten."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Where is Honey Hive Montessori House located in Chennai?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We are located at Raama Associates, 1A, Vinayaganagar, MCN Nagar Extension, Thoraipakkam, Chennai, Tamil Nadu 600097."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How can I schedule a school visit?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "You can schedule a visit by calling +91 99529 00051 or submitting the enquiry form on our website."
+            }
+          }
+        ]
+      }
+    </script>
   </head>
 
   <body>
+    <!-- React Root -->
     <div id="root"></div>
+
+    <!-- React Entry -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
