--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Search Console Verification -->
+    <meta
+      name="google-site-verification"
+      content="VZSo1AtIxK1nB_BivsYH3I1_Ev3XO6U2lOvN24YZWLI"
+    />
+
     <!-- Basic -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -88,13 +94,7 @@
             "closes": "14:00"
           }
         ],
-        "areaServed": [
-          "Thoraipakkam",
-          "OMR",
-          "Perungudi",
-          "Sholinganallur",
-          "Chennai"
-        ]
+        "areaServed": ["Thoraipakkam", "OMR", "Perungudi", "Sholinganallur", "Chennai"]
       }
     </script>
 
